maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: not found: value c
  while((isOverBaggle==false)&&(c!=0)){
                                ^PledgeMaze:26: error: not found: value c
  c+=1
  ^PledgeMaze:29: error: not found: value c
    c-=1
    ^