maze.pledge.PledgeMaze.scala.code
override def run() {

  var c=0
  while(isOverBaggle==false){
    if(!murNord){forward();}
    else{
      right();
      suivremur()
    }
  }
  pickupBaggle;
}


def suivremur()={
  while((isOverBaggle==false)&&(c!=0)){
    mur()
  }
}


def mur()={

  left()
  c+=1
  while(isFacingWall==true){
    right();
    c-=1
  }
  forward();
}

def murNord():Boolean={
  setDirection(Direction.NORTH)
  if(isFacingWall==true){return true;}
  else {return false;} 
}